--- a/clients/build.gradle
+++ b/clients/build.gradle
@@ -38,5 +38,5 @@ task runClient(type: JavaExec, dependsOn: assemble) {
 task runServer(type: JavaExec, dependsOn: assemble) {
     classpath = sourceSets.main.runtimeClasspath
     main = 'com.t20worldcup.webserver.Starter'
-    args '--server.port=10050', '--config.rpc.host=localhost', '--config.rpc.port=10006', '--config.rpc.username=user1', '--config.rpc.password=test'
+    args '--server.port=10050', '--bank.config.rpc.host=localhost', '--bank.config.rpc.port=10018', '--bank.config.rpc.username=user1', '--bank.config.rpc.password=test', '--school.config.rpc.host=localhost', '--school.config.rpc.port=10091', '--school.config.rpc.username=user1', '--school.config.rpc.password=test', '--student.config.rpc.host=localhost', '--student.config.rpc.port=10006', '--student.config.rpc.username=user1', '--student.config.rpc.password=test'
 }
