--- a/clients/build.gradle
+++ b/clients/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 }
 
 springBoot {
-    mainClassName = "com.t20worldcup.webserver.Server"
+    mainClassName = "com.t20worldcup.webserver.Starter"
 }
 
 task runClient(type: JavaExec, dependsOn: assemble) {
